gccida/c0/loop_iterations
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:3999:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv_inc; // [rsp+78h] [rbp-C8h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:3999:14: error: use of undeclared identifier 'biv_inc'
induction_1 *biv_inc; // [rsp+78h] [rbp-C8h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4001:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+88h] [rbp-B8h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4001:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+88h] [rbp-B8h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4016:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison_code; // [rsp+ECh] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4026:19: error: expected identifier or '('
 struct loop_info = (  struct loop_info *)loop->aux; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4038:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
last_loop_insn = ( rtx)loop->end[1]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4053:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temp = ( rtx)last_loop_insn[1]; 
             ^~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4081:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temp = ( rtx)temp[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4101:40: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
comparison_value = (  struct rtx_def *)comparison[1]; 
                                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4122:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)iteration_var)] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4151:1: error: use of undeclared identifier 'v'
v = ivs->regs[iteration_var->fld[0].rtuint].iv.info; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4152:6: error: use of undeclared identifier 'v'
if ( v->src_reg->fld[0].rtint >= loop_info->ivs.n_regs ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4154:23: error: use of undeclared identifier 'v'
if ( ( ( *( ( _WORD *)v + 50) >> 4) & 1) == 0 || ( ( *( ( _WORD *)v + 50) >> 5) & 1) != 0 ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4154:67: error: use of undeclared identifier 'v'
if ( ( ( *( ( _WORD *)v + 50) >> 4) & 1) == 0 || ( ( *( ( _WORD *)v + 50) >> 5) & 1) != 0 ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4160:18: error: use of undeclared identifier 'v'
bl_0 = ivs->regs[v->src_reg->fld[0].rtuint].iv.class; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4164:9: error: use of undeclared identifier 'v'
mult1 = v->mult_val; 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4165:28: error: use of undeclared identifier 'v'
v1 = extend_value_for_giv( v, increment); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/unroll.c:4166:62: error: use of undeclared identifier 'v'
increment = fold_rtx_mult_add( mult1, v1, const_int_rtx[64], v->mode); 
                                                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_iterations/src/obj/unroll.o] Error 1
